[package]
name = "deepl"
version = "0.6.5"
edition = "2021"
authors = ["Avimitin <avimitin@gmail.com>"]
description = "A Rust implementation of the DeepL API"
documentation = "https://docs.rs/deepl"
keywords = ["translate", "deepl", "api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Avimitin/deepl-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.3"
reqwest = {version = "0.12.9", features = ["multipart", "json", "stream"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt", "macros", "fs", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1.16"
paste = "1.0.15"
typed-builder = "0.20"

[dev-dependencies]
docx-rs = "0.4.17"

[lib]
doctest = false
