[package]
name = "deepl"
version = "0.7.1"
edition = "2021"
authors = ["Avimitin <avimitin@gmail.com>"]
description = "A Rust implementation of the DeepL API"
documentation = "https://docs.rs/deepl"
keywords = ["translate", "deepl", "api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Avimitin/deepl-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.17"
reqwest = {version = "0.12.24", features = ["multipart", "json", "stream"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "macros", "fs", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1.17"
paste = "1.0.15"
typed-builder = "0.20"

[dev-dependencies]
docx-rs = "0.4.18"

[lib]
doctest = false
